🐛 Fix issue with fdn-logo being too long

--- a/ui/foundation/components/logo.scss
+++ b/ui/foundation/components/logo.scss
@@ -3,6 +3,7 @@
  * file, You can obtain one at http://mozilla.org/MPL/2.0/. */
 
 .fdn-logo {
+	width: fit-content;
 	color: var(--fdn-colours-black);
 }
 
